# structured-achievement-tool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  <MagicMock name='makedirs' id='131836064000544'>  ARCHIVE_DESIGN_VALIDATION_REPORT.md  CLAUDE.md  DAILY_MONITORING_CHECKLIST.md  EMAIL_WARMUP_ABORT_CRITERIA.md  EMAIL_WARMUP_PLAN_logicalfront.net.md  EMAIL_WARMUP_SCHEDULE_logicalfront.net.md  EXECUTION_SUMMARY.md  HEALTH_CHECK_REPORT.md  IMPLEMENTATION_SUMMARY.md  MAUTIC_SUITECRM_FIELD_MAPPING.md  MAUTIC_WARMUP_CONFIGURATION.md  US-001_PLAN.md  US-001_VERIFICATION_SUMMARY.md  US-005_IMPLEMENTATION_SUMMARY.md  US-006_IMPLEMENTATION_PLAN.md  US-006_IMPLEMENTATION_SUMMARY.md  US-006_VERIFICATION_SUMMARY.md  US-008_IMPLEMENTATION_SUMMARY.md  US-008_PLAN.md  US-011_DESIGN.md  VECTOR_MEMORY_IMPLEMENTATION.md  VERIFICATION_SUMMARY_US-001.md  coding_standards.md  command_output.txt  config.json  config.json.bak  conftest.py  corrections.md  coverage.json  create_mautic_segments.py  debug_import.py  docker_health_check.py  domain_glossary.md  email-validation-pipeline.json  health_check.py  (+23 more)
.memory/: audit_journal.jsonl  checkpoints.db  health_alert_state.json  langgraph_checkpoints.db  langgraph_checkpoints.db-shm  langgraph_checkpoints.db-wal  sat.db  task_vectors.db  test_checkpoints.db  test_checkpoints2.db  test_checkpoints3.db  test_checkpoints4.db  test_checkpoints5.db  test_migration_roundtrip.db-shm  test_migration_roundtrip.db-wal  vectors.db  vectors.db-shm  vectors.db-wal
.tmp_sdt/: EXECUTIVE_SUMMARY.md  FULL_LOOP_PROOF.md  TASK_COMPLETE.md  (+7 more)
(+428 files in other folders)
