[project]
name = "structured-achievement-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
    "sqlite-vec>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py", "*.test.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html:htmlcov --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/web/*",
    "src/templates/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
